--- a/_config.yml
+++ b/_config.yml
@@ -86,3 +86,16 @@ deploy:
   type: git
   repository: git@git.dev.tencent.com:orion545/orion545.coding.me.git
   branch: master
+
+# hexo-filter-plugin (https://github.com/Jamling/hexo-filter-highlight) config 
+## highlight in frontend, the plugin (backend) just do some prepare work.
+## you need to read the docs on https://github.com/Jamling/hexo-filter-highlight to getting start
+hljs:
+  enable: true #true to enable the plugin
+  line_number: frontend # add line_number in frontend or backend
+  trim_indent: backend # trim the indent of code block to prettify output. backend or front-end (recommend)
+  copy_code: true # show copy code in caption.
+  label:
+    left: Code
+    right: ':'
+    copy: Copy Code
