--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,9 @@ search:
 ## Docs: https://hexo.io/docs/deployment.html
 deploy: 
   type: git
-  repository: git@git.dev.tencent.com:orion545/orion545.coding.me.git
+  repository: 
+    git@git.dev.tencent.com:orion545/orion545.coding.me.git
+    git@github.com:Orion545/orion545.github.io.git
   branch: master
 
 # hexo-filter-plugin (https://github.com/Jamling/hexo-filter-highlight) config 
