--- a/_config.yml
+++ b/_config.yml
@@ -79,6 +79,14 @@ search:
   field: post
   format: html
   limit: 10000
+feed:
+  type: atom
+  path: atom.xml
+  limit: 20
+  hub:
+  content:
+  content_limit: 140
+  content_limit_delim: ' '
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
