--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,8 @@ archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
-skip_render:
+skip_render: 
+  - "googleb43b54cd5dd46f30.html"
 
 # Writing
 new_post_name: :title.md # File name of new posts
