--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,7 @@ code_dir: downloads/code
 i18n_dir: :lang
 skip_render: 
   - "googleb43b54cd5dd46f30.html"
+  - "baidu_verify_F5Y1kG5vxk.html"
 
 # Writing
 new_post_name: :title.md # File name of new posts
