--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Orion545's Blog
 subtitle: Even the world forsaked you, One shall never abandon himself!
-description: Former OIer, Learning Android Dev
+description: Former OIer, Idealist programmer
 keywords:
 author: Orion545
 language:
